Bug 1329321 - Add a soft-fail mechanism for JS ObjectOpResult. r=jorendorff

--HG--
extra : rebase_source : 168a0a678d62879dce0075ecedb8fb0703ceb8c1