js/src/builtin/Reflect.cpp
@@ -42,7 +42,7 @@ Reflect_deleteProperty(JSContext* cx, unsigned argc, Value* vp)
     ObjectOpResult result;
     if (!DeleteProperty(cx, target, key, result))
         return false;
-    args.rval().setBoolean(bool(result));
+    args.rval().setBoolean(result.reallyOk());
     return true;
 }
 
@@ -118,7 +118,7 @@ Reflect_preventExtensions(JSContext* cx, unsigned argc, Value* vp)
     ObjectOpResult result;
     if (!PreventExtensions(cx, target, result))
         return false;
-    args.rval().setBoolean(bool(result));
+    args.rval().setBoolean(result.reallyOk());
     return true;
 }
 
@@ -147,7 +147,7 @@ Reflect_set(JSContext* cx, unsigned argc, Value* vp)
     RootedValue value(cx, args.get(2));
     if (!SetProperty(cx, target, key, value, receiver, result))
         return false;
-    args.rval().setBoolean(bool(result));
+    args.rval().setBoolean(result.reallyOk());
     return true;
 }
 
@@ -180,7 +180,7 @@ Reflect_setPrototypeOf(JSContext* cx, unsigned argc, Value* vp)
     ObjectOpResult result;
     if (!SetPrototype(cx, obj, proto, result))
         return false;
-    args.rval().setBoolean(bool(result));
+    args.rval().setBoolean(result.reallyOk());
     return true;
 }
 
